--- a/src/home.html
+++ b/src/home.html
@@ -4,33 +4,36 @@
     <meta charset="UTF-8">
     <title>Photo Life</title>
     <link href ="../css/reset.css" rel="stylesheet">
+    <link href ="../css/homepage.css" rel="stylesheet">
+    <link href ="../css/home.css" rel="stylesheet">
 </head>
 <body>
 <header id="header">
     <h1>Photo Life</h1>
     <h2>Share your life here!</h2>
-    <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="browse.html">Browse</a></li>
-        <li><a href="search.html">Search</a></li>
+    <ul class="ulheader">
+        <li><a href="home.html"><img src="../images/icons/home2.png">Home</a></li>
+        <li><a href="browse.html"><img src="../images/icons/browse.png">Browse</a></li>
+        <li><a href="search.html"><img src="../images/icons/search.png">Search</a></li>
         <li>
-            <h3>My Account</h3>
-            <ul>
-                <li><a href="photo.html">My Photos</a></li>
-                <li><a href="favor.html">My Favors</a></li>
-                <li><a href="upload.html">Upload</a></li>
-                <li><a href="../index.html">Login</a></li>
+            <ul class="ulaccount">
+                <h3>My Account</h3>
+                <li><a href="photo.html"><img src="../images/icons/photo.png">My Photos</a></li>
+                <li><a href="favor.html"><img src="../images/icons/favor.png">My Favors</a></li>
+                <li><a href="upload.html"><img src="../images/icons/upload.png">Upload</a></li>
+                <li><a href="../index.html"><img src="../images/icons/login.png">Login</a></li>
             </ul>
         </li>
     </ul>
+
 </header>
 <main>
     <section>
-        <figure>
+        <figure class="mainpic">
             <a href="info.html"><img src="../images/normal/Fuji.png"></a>
         </figure>
     </section>
-    <section>
+    <section class="homepic">
         <table>
             <tr>
                 <td>
@@ -157,9 +160,9 @@
             </tr>
         </table>
     </section>
-    <aside>
-        <button class="toTop"><a href="#header"><img src="../images/icons/up.ico"></a></button>
-        <button class="refresh"><img src="../images/icons/renew.ico" onclick="alert('Renew Done')"></button>
+    <aside class="asidebutton">
+        <button class="toTop"><a href="#header"><img src="../images/icons/up.png"></a></button>
+        <button class="renew"><img src="../images/icons/renew.png" onclick="alert('Renew Done')"></button>
     </aside>
 </main>
 </body>
