--- a/src/search.html
+++ b/src/search.html
@@ -4,26 +4,30 @@
     <meta charset="UTF-8">
     <title>Photo Life</title>
     <link href ="../css/reset.css" rel="stylesheet">
+    <link href ="../css/homepage.css" rel="stylesheet">
+    <link href ="../css/search.css" rel="stylesheet">
 </head>
 <body>
 <header id="header">
     <h1>Photo Life</h1>
     <h2>Share your life here!</h2>
-    <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="browse.html">Browse</a></li>
-        <li><a href="search.html">Search</a></li>
+    <ul class="ulheader">
+        <li><a href="home.html"><img src="../images/icons/home.png">Home</a></li>
+        <li><a href="browse.html"><img src="../images/icons/browse.png">Browse</a></li>
+        <li><a href="search.html"><img src="../images/icons/search2.png">Search</a></li>
         <li>
-            <h3>My Account</h3>
-            <ul>
-                <li><a href="photo.html">My Photos</a></li>
-                <li><a href="favor.html">My Favors</a></li>
-                <li><a href="upload.html">Upload</a></li>
-                <li><a href="../index.html">Login</a></li>
+            <ul class="ulaccount">
+                <h3>My Account</h3>
+                <li><a href="photo.html"><img src="../images/icons/photo.png">My Photos</a></li>
+                <li><a href="favor.html"><img src="../images/icons/favor.png">My Favors</a></li>
+                <li><a href="upload.html"><img src="../images/icons/upload.png">Upload</a></li>
+                <li><a href="../index.html"><img src="../images/icons/login.png">Login</a></li>
             </ul>
         </li>
     </ul>
+
 </header>
+
 <main>
     <form>
         <fieldset>
@@ -31,7 +35,6 @@
             <div>
                 <input type="radio" name="search method" checked>Search by title:
                 <label><input type="text" placeholder="Write your title here" autofocus></label>
-                /*radio是在name一致的input中单选*/
             </div>
             <div>
                 <input type="radio" name="search method">Search by description:
