--- a/src/favor.html
+++ b/src/favor.html
@@ -20,7 +20,7 @@
             <ul class="ulaccount">
                 <h3>My Account</h3>
                 <li><a href="photo.html"><img src="../images/icons/photo.png">My Photos</a></li>
-                <li><a href="favor.html"><img src="../images/icons/favor2.png">My Favors</a></li>
+                <li><a href="favor.html" id="current"><img src="../images/icons/favor2.png">My Favors</a></li>
                 <li><a href="upload.html"><img src="../images/icons/upload.png">Upload</a></li>
                 <li><a href="../index.html"><img src="../images/icons/login.png">Login</a></li>
             </ul>
@@ -29,7 +29,7 @@
 
 </header>
 <main>
-    <section>
+    <section id="figure">
         <div>
             <figure>
                 <a href="info.html"><img src="../images/normal/medium/222222.jpg"> </a>
@@ -123,8 +123,7 @@
                 </figcaption>
             </figure>
             <form>
-                <input type="button" value="Modify" onclick="alert('Modify Done')">
-                <input type="button" value="Delete" onclick="alert('Delete Done')">
+                <input type="button" value="Remove" onclick="alert('Remove Done')">
             </form>
         </div>
     </section>
