--- a/src/home.html
+++ b/src/home.html
@@ -12,10 +12,10 @@
     <h1>Photo Life</h1>
     <h2>Share your life here!</h2>
     <ul class="ulheader">
-        <li><a href="home.html"><img src="../images/icons/home2.png">Home</a></li>
+        <li><a href="home.html" id="current"><img src="../images/icons/home2.png">Home</a></li>
         <li><a href="browse.html"><img src="../images/icons/browse.png">Browse</a></li>
         <li><a href="search.html"><img src="../images/icons/search.png">Search</a></li>
-        <li>
+        <li class="liaccount">
             <ul class="ulaccount">
                 <h3>My Account</h3>
                 <li><a href="photo.html"><img src="../images/icons/photo.png">My Photos</a></li>
@@ -25,7 +25,6 @@
             </ul>
         </li>
     </ul>
-
 </header>
 <main>
     <section>
