--- a/src/info.html
+++ b/src/info.html
@@ -28,10 +28,10 @@
 
 </header>
 <main>
-    <figure>
+    <figure id="Fuji">
         <img src="../images/normal/Fuji.png">
     </figure>
-    <section>
+    <section id="info">
         <div>
             <h3>Like Number</h3>
             <p>438</p>
@@ -58,7 +58,7 @@
             </table>
         </div>
     </section>
-    <div>
+    <div id="info2">
         <h3>Title</h3>
         <p>
             Welcome to the Fundamentals of Web Development.The textbook is intended to cover the bro
@@ -66,6 +66,7 @@
             to upper-level computing students.
         </p>
     </div>
+    <input id="like" type="submit" value="Like" onclick="alert('like done')">
 </main>
 <footer>
     <div>BeardBear02 版权所有,保留一切权利</div>
