--- a/src/photo.html
+++ b/src/photo.html
@@ -5,7 +5,7 @@
     <title>Photo Life</title>
     <link href ="../css/reset.css" rel="stylesheet">
     <link href ="../css/homepage.css" rel="stylesheet">
-    <link href ="../css/search.css" rel="stylesheet">
+    <link href ="../css/photo.css" rel="stylesheet">
 </head>
 <body>
 <header id="header">
@@ -18,7 +18,7 @@
         <li>
             <ul class="ulaccount">
                 <h3>My Account</h3>
-                <li><a href="photo.html"><img src="../images/icons/photo2.png">My Photos</a></li>
+                <li><a href="photo.html" id="current"><img src="../images/icons/photo2.png">My Photos</a></li>
                 <li><a href="favor.html"><img src="../images/icons/favor.png">My Favors</a></li>
                 <li><a href="upload.html"><img src="../images/icons/upload.png">Upload</a></li>
                 <li><a href="../index.html"><img src="../images/icons/login.png">Login</a></li>
@@ -28,7 +28,7 @@
 
 </header>
 <main>
-    <section>
+    <section id="figure">
         <div>
             <figure>
                 <a href="info.html"><img src="../images/normal/medium/222222.jpg"> </a>
