--- a/src/search.html
+++ b/src/search.html
@@ -14,7 +14,7 @@
     <ul class="ulheader">
         <li><a href="home.html"><img src="../images/icons/home.png">Home</a></li>
         <li><a href="browse.html"><img src="../images/icons/browse.png">Browse</a></li>
-        <li><a href="search.html"><img src="../images/icons/search2.png">Search</a></li>
+        <li><a href="search.html" id="current"><img src="../images/icons/search2.png">Search</a></li>
         <li>
             <ul class="ulaccount">
                 <h3>My Account</h3>
@@ -27,10 +27,9 @@
     </ul>
 
 </header>
-
 <main>
     <form>
-        <fieldset>
+        <fieldset id="search">
             <legend>Search</legend>
             <div>
                 <input type="radio" name="search method" checked>Search by title:
