--- a/src/register.html
+++ b/src/register.html
@@ -15,16 +15,16 @@
     <fieldset>
         <legend>Join us now!</legend>
         <div>
-            <label>Username:<input type="text" name="Username" placeholder="Username" required></label>
+            <label><input type="text" name="Username" placeholder="Username" required></label>
         </div>
         <div>
-            <label>Email:<input type="email" name="Email" placeholder="Email" required></label>
+            <label><input type="email" name="Email" placeholder="Email" required></label>
         </div>
         <div>
-            <label>Password:<input type="password" name="Password" placeholder="Password" required></label>
+            <label><input type="password" name="Password" placeholder="Password" required></label>
         </div>
         <div>
-            <label>Check it⬆:<input type="password" name="Password" placeholder="Password" required></label>
+            <label><input type="password" name="Password" placeholder="Check it" required></label>
         </div>
     </fieldset>
     <div>
